:memo: Minor edits of the celltypist notebook

--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Create a cell type registry in LaminDB from CellTypist ontology\n",
     "\n",
-    "[Publication](https://www.science.org/doi/10.1126/science.abl5197)"
+    "Celltypist [publication](https://www.science.org/doi/10.1126/science.abl5197), [github](https://github.com/Teichlab/celltypist)."
    ]
   },
   {
@@ -72,9 +72,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ref = pd.read_excel(celltypist_ontology[\"v2\"])\n",
+    "celltypist_df = pd.read_excel(celltypist_ontology[\"v2\"])\n",
     "\n",
-    "ref"
+    "celltypist_df"
    ]
   },
   {
@@ -91,8 +91,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "high_terms, low_terms = set(ref[\"High-hierarchy cell types\"].unique()), set(\n",
-    "    ref[\"Low-hierarchy cell types\"].unique()\n",
+    "high_terms, low_terms = set(celltypist_df[\"High-hierarchy cell types\"].unique()), set(\n",
+    "    celltypist_df[\"Low-hierarchy cell types\"].unique()\n",
     ")"
    ]
   },
@@ -115,9 +115,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make sure you create or load a LaminDB instance before running the rest part of this notebook!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "# A lamindb instance containing bionty schema (skip if you already loaded your instance)\n",
@@ -165,7 +177,7 @@
    "outputs": [],
    "source": [
     "records = ln.parse(\n",
-    "    ref,\n",
+    "    celltypist_df,\n",
     "    {\n",
     "        \"Low-hierarchy cell types\": CellType.name,\n",
     "        \"Description\": CellType.definition,\n",
@@ -406,7 +418,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = celltypist.annotate(input_file, majority_voting=True)"
+    "predictions = celltypist.annotate(\n",
+    "    input_file, model=\"Immune_All_Low.pkl\", majority_voting=True\n",
+    ")"
    ]
   },
   {
@@ -538,6 +552,23 @@
     "ln.select(ln.File).join(ln.File.cell_types).where(\n",
     "    CellType.name == db_lookup.Tcm_Naive_helper_T_cells\n",
     ").all()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or track in which notebook the file is annotated by celltypist:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.select(ln.Transform).join(ln.File).where(ln.File.name.contains(\"celltypist\")).df()"
    ]
   }
  ],
