--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -25,14 +25,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we are creating a cell type registry for all cell types that the tool cell type classification tool CellTypist supports. We will further use CellTypist to classify cell types of a previously unannotated dataset and ingest the dataset with Lamin. Finally, we will demonstrate how to fetch datasets with cell type queries using Lamin."
+    "In the dynamic world of biotech and pharmaceutical research, where numerous single-cell datasets are generated, the ability to seamlessly query and integrate datasets across different internal groups based on, for example, specific cell types proves exceptionally valuable."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "CellTypist is a powerful computational tool for cell type classification in single-cell RNA sequencing (scRNA-seq) data. By employing machine learning algorithms, it accurately assigns cell types based on gene expression profiles, aiding in the identification and characterization of different cell types within heterogeneous cell populations."
+    "In this notebook we are creating a cell type registry for all cell types that [CellTypist](https://www.celltypist.org) supports. CellTypist is a powerful computational tool for cell type classification in single-cell RNA sequencing data. By employing machine learning algorithms, it assigns cell types based on gene expression profiles, aiding in the identification and characterization of different cell types within heterogeneous cell populations. We will further use CellTypist to classify cell types of a previously unannotated dataset and ingest the dataset with Lamin. Finally, we will demonstrate how to fetch datasets with cell type queries using Lamin."
    ]
   },
   {
@@ -95,25 +95,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltypist_ontology = {\n",
-    "    \"v2\": \"https://github.com/Teichlab/celltypist_wiki/raw/main/atlases/Pan_Immune_CellTypist/v2/tables/Basic_celltype_information.xlsx\",\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's read in the metadata table:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "celltypist_df = pd.read_excel(celltypist_ontology[\"v2\"])\n",
+    "celltypist_df = pd.read_excel(\n",
+    "    \"https://github.com/Teichlab/celltypist_wiki/raw/main/atlases/Pan_Immune_CellTypist/v2/tables/Basic_celltype_information.xlsx\"\n",
+    ")\n",
     "celltypist_df"
    ]
   },
@@ -186,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we import `lamindb` and `lnschema_bionty` which enables us to connect [Bionty](https://github.com/laminlabs/bionty) with [LaminDB](https://github.com/laminlabs/lamindb). In other words, we'll be able to map cell types against ontologies and create SQL records within LaminDB to finally make them searchable."
+    "Next we import `lamindb` and `lnschema_bionty` which enables us to connect [Bionty](https://github.com/laminlabs/bionty) with [LaminDB](https://github.com/laminlabs/lamindb). This enables us to map cell types against ontologies and create SQL records within LaminDB to eventually make them queryable."
    ]
   },
   {
@@ -221,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll use :func:`ln.parse` to parse the `Low-hierarchy cell types` from the `celltypist_df` into Bionty Schema records that are ready to be added to our LaminDB instance. Note how the DataFrame values correspond to the fields of `CellType`."
+    "We'll use {func}`docs:lamindb.parse` to parse the `Low-hierarchy cell types` from the `celltypist_df` into Bionty Schema records that are ready to be added to our LaminDB instance. Note how the DataFrame values correspond to the fields of `CellType`."
    ]
   },
   {
@@ -295,7 +279,7 @@
    "source": [
     "Let's look up `ontology_id` for T cells from the [Cell Ontology (cl)](https://www.ebi.ac.uk/ols/ontologies/cl).\n",
     "For this purpose, we create a `lookup` instance from the `bionty_celltype` object.\n",
-    "This will allow us to use autocomplete again to search for our cell type of interest (T cell) as an example here."
+    "This will allow us to use autocomplete to search for our cell type of interest (T cell) as an example here."
    ]
   },
   {
@@ -322,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty_celltype_lookup.fuzzy_match(\"T cells\", bionty_celltype_lookup.name)"
+    "bionty_celltype.fuzzy_match(\"T cells\", bionty_celltype_lookup.name)"
    ]
   },
   {
@@ -415,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All that is now left to do is to add these records to our LaminDB instance using :func:`ln.add` ."
+    "All that is now left to do is to add these records to our LaminDB instance using {func}`docs:lamindb.add` ."
    ]
   },
   {
@@ -439,7 +423,7 @@
    "metadata": {},
    "source": [
     "The previously added CellTypist ontology registry is now available in LaminDB.\n",
-    "To retrieve the full ontology table as a :func:`pd.DataFrame` we can use :func:`ln.select`:"
+    "To retrieve the full ontology table as a Pandas DataFrame we can use {func}`docs:lamindb.select`:"
    ]
   },
   {
@@ -525,7 +509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we've predicted all cell types we create an Anndata object that we will eventually track with LaminDB."
+    "Now that we've predicted all cell types we create an [Anndata](https://anndata.readthedocs.io/en/latest) object that we will eventually track with LaminDB."
    ]
   },
   {
@@ -582,7 +566,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's enable tracking of the current notebook as the transform of this file using :func:`ln.track`:"
+    "Let's enable tracking of the current notebook as the transform of this file using {func}`docs:lamindb.track`:"
    ]
   },
   {
@@ -598,7 +582,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a file record using :func:`ln.File` of the AnnData object.\n",
+    "Create a file record using {func}`docs:lamindb.File` of the AnnData object.\n",
     "We further define a name of the dataset for clarity that can also be queried for."
    ]
   },
@@ -696,14 +680,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook is available at https://github.com/laminlabs/lamin-examples."
+    "This notebook is available at [https://github.com/laminlabs/lamin-examples](https://github.com/laminlabs/lamin-examples)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## References and further tutorials"
+    "## References"
    ]
   },
   {
