--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -146,8 +146,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Warning** \n",
-    "> Please ensure that you have created or loaded a LaminDB instance before running the remaining part of this notebook!"
+    "```{warning}\n",
+    "\n",
+    "Please ensure that you have created or loaded a LaminDB instance before running the remaining part of this notebook!\n",
+    "```"
    ]
   },
   {
