--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -308,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty_celltype.fuzzy_match(\"T cells\", bionty_celltype_lookup.name)"
+    "bionty_celltype.fuzzy_match(\"T cells\", bionty_celltype.name)"
    ]
   },
   {
@@ -324,7 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "record_t_cell = CellType(lookup.T_cell)\n",
+    "record_t_cell = CellType(bionty_celltype_lookup.T_cell)\n",
     "record_t_cell"
    ]
   },
