:memo: Added notebook tracking to enrichr example

--- a/docs/biology/enrichr.ipynb
+++ b/docs/biology/enrichr.ipynb
@@ -137,6 +137,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check which ontology of Pathway is being used in bionty\n",
+    "\n",
+    "Pathway.bionty()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -430,6 +441,23 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's enable tracking of the current notebook as the transform of this file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.track()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -682,6 +710,16 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.16"
+  },
+  "nbproject": {
+   "id": "6oxEIEduvo6w",
+   "parent": null,
+   "pypackage": null,
+   "time_init": "2023-06-02T11:39:19.752181+00:00",
+   "user_handle": "sunnyosun",
+   "user_id": "kmvZDIX9",
+   "user_name": "Sunny Sun",
+   "version": "0"
   }
  },
  "nbformat": 4,
