:art: Simplified titles

--- a/docs/biology/enrichr.ipynb
+++ b/docs/biology/enrichr.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create a Pathway registry from Gene Ontology(GO) and link to Enrichr results"
+    "# Manage pathway ontology"
    ]
   },
   {
