:pencil2: Fix api call

--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -377,7 +377,7 @@
    "outputs": [],
    "source": [
     "record_t_cell.name = \"T cells\"\n",
-    "record_t_cell.add_synonyms(\"T cell\")\n",
+    "record_t_cell.add_synonym(\"T cell\")\n",
     "\n",
     "record_t_cell"
    ]
