--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -5,9 +5,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create a cell type registry in LaminDB from CellTypist ontology\n",
-    "\n",
-    "Celltypist [publication](https://www.science.org/doi/10.1126/science.abl5197), [github](https://github.com/Teichlab/celltypist)."
+    "# Manage cell type ontology"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Background"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cell types refer to the distinct functional and structural categories into which cells can be classified based on their characteristics and behaviors. They are assigned based on various characteristics such as gene expression patterns, morphology, and functional properties. This assignment is useful as it enables researchers to unravel the diverse cellular landscape, understand cellular heterogeneity, and gain insights into the specific roles and interactions of different cell types, advancing fields like disease research, regenerative medicine, and drug discovery."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the dynamic world of biotech and pharmaceutical research, where numerous single-cell datasets are generated, the ability to seamlessly query and integrate datasets across different internal groups based on, for example, specific cell types proves exceptionally valuable."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook we are creating a cell type registry for all cell types that [CellTypist](https://www.celltypist.org) supports. CellTypist is a powerful computational tool for cell type classification in single-cell RNA sequencing data. By employing machine learning algorithms, it assigns cell types based on gene expression profiles, aiding in the identification and characterization of different cell types within heterogeneous cell populations. We will further use CellTypist to classify cell types of a previously unannotated dataset and ingest the dataset with Lamin. Finally, we will demonstrate how to fetch datasets with cell type queries using Lamin."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
    ]
   },
   {
@@ -41,21 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Celltypist ontology reference\n",
-    "\n",
-    "CellTypist's Cell Type Encyclopedia provides mapped ontology_id of Cell Ontology (cl) for majority of terms."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "celltypist_ontology = {\n",
-    "    \"v1\": \"https://github.com/Teichlab/celltypist_wiki/raw/main/atlases/Pan_Immune_CellTypist/v1/tables/Basic_celltype_information.xlsx\",\n",
-    "    \"v2\": \"https://github.com/Teichlab/celltypist_wiki/raw/main/atlases/Pan_Immune_CellTypist/v2/tables/Basic_celltype_information.xlsx\",\n",
-    "}"
+    "## Creating the CellTypist cell type registry"
    ]
   },
   {
@@ -63,7 +87,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's read in the metadata table of v2:"
+    "### Fetching CellTypists immune cell encyclopedia"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As a first step we will read in CellTypist's immune cell encyclopedia. It provides mapped `ontology_id` of Cell Ontology (cl) for the majority of terms."
    ]
   },
   {
@@ -72,8 +104,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltypist_df = pd.read_excel(celltypist_ontology[\"v2\"])\n",
-    "\n",
+    "celltypist_df = pd.read_excel(\n",
+    "    \"https://github.com/Teichlab/celltypist_wiki/raw/main/atlases/Pan_Immune_CellTypist/v2/tables/Basic_celltype_information.xlsx\"\n",
+    ")\n",
     "celltypist_df"
    ]
   },
@@ -82,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These 4 terms are not annotated with Cell Ontology (cl):"
+    "CellTypist uses different hierarchies of cell types (`High-hierarchy cell types` and `Low-hierarchy cell types`). By taking the intersection of both levels we learn that 4 terms of the `High-hierarchy cell types` are not mapped to Cell Ontology:"
    ]
   },
   {
@@ -102,7 +135,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "high_terms.difference(low_terms)"
+    "high_terms_umapped = high_terms.difference(low_terms)\n",
+    "high_terms_umapped"
    ]
   },
   {
@@ -110,8 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register CellTypist cell type ontology in LaminDB\n",
-    "\n"
+    "We want to ensure that all of our cell types of any dataset are eventually mapped against the Cell Ontology and queryable. Therefore, we will later create Lamin records for these unmapped terms. As a next step, we register all `low-hierarchy cell types` with Lamin."
    ]
   },
   {
@@ -119,7 +152,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make sure you create or load a LaminDB instance before running the rest part of this notebook!"
+    "### Register CellTypist cell type encyclopedia in LaminDB"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{warning}\n",
+    "\n",
+    "Please ensure that you have created or loaded a LaminDB instance before running the remaining part of this notebook!\n",
+    "```"
    ]
   },
   {
@@ -132,10 +176,18 @@
    },
    "outputs": [],
    "source": [
-    "# A lamindb instance containing bionty schema (skip if you already loaded your instance)\n",
-    "# lamin1 schema is needed for linking CellType directly to File\n",
+    "# A lamindb instance containing Bionty schema (skip if you already loaded your instance)\n",
+    "# The lamin1 schema is needed for linking CellType directly to File\n",
     "\n",
     "!lamin init --storage celltypist --schema bionty,lamin1"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we import `lamindb` and `lnschema_bionty` which enables us to connect [Bionty](https://github.com/laminlabs/bionty) with [LaminDB](https://github.com/laminlabs/lamindb). This enables us to map cell types against ontologies and create SQL records within LaminDB to eventually make them queryable."
    ]
   },
   {
@@ -156,9 +208,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check the fields of CellType table in lnschema-bionty\n",
-    "# CellType fields are accessible via auto-completion `CellType.`\n",
-    "\n",
+    "# Check out which ontology of cell types is used in bionty\n",
+    "bionty_celltype"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's check the fields of CellType table in `lnschema-bionty`. All CellType fields are accessible via auto-completion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "CellType.__fields__.keys()"
    ]
   },
@@ -167,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create records for Low-hierarchy cell types"
+    "We'll use {func}`docs:lamindb.parse` to parse the `Low-hierarchy cell types` from the `celltypist_df` into Bionty Schema records that are ready to be added to our LaminDB instance. Note how the DataFrame values correspond to the fields of `CellType`."
    ]
   },
   {
@@ -200,9 +267,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create records for High-hierarchy cell types\n",
-    "\n",
-    "Only 4 High-hierarchy cell types are not present in the Low-hierarchy cell types, and these terms don't have ontology metadata"
+    "All records now contain a unique record ID, the proper cell type name, the Cell Ontology ID, the cell type definition and the operation ID that generated the records."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create records for High-hierarchy cell types"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As mentioned above, 4 `High-hierachy cell types` are not present in the `Low-hierarchy cell types` and do not have ontology metadata."
    ]
   },
   {
@@ -211,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "high_terms.difference(low_terms)"
+    "high_terms_umapped"
    ]
   },
   {
@@ -221,20 +302,18 @@
    "source": [
     "Here we have 2 options to add these 4 terms:\n",
     "\n",
-    "1. Annotate terms with ontology metadata using bionty lookup function\n",
+    "1. Annotate terms with ontology metadata using Bionty's lookup function\n",
     "2. Create records without metadata"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Let's look up ontology_id for T cells from the Cell Ontology (cl)\n",
-    "\n",
-    "lookup = bionty_celltype.lookup()\n",
-    "lookup.T_cell"
+    "Let's look up `ontology_id` for T cells from the [Cell Ontology (cl)](https://www.ebi.ac.uk/ols/ontologies/cl).\n",
+    "For this purpose, we create a `lookup` instance from the `bionty_celltype` object.\n",
+    "This will allow us to use autocomplete to search for our cell type of interest (T cell) as an example here."
    ]
   },
   {
@@ -243,8 +322,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Alternatively, you can search for a standard term by fuzzy string matching\n",
-    "\n",
+    "bionty_celltype_lookup = bionty_celltype.lookup()\n",
+    "bionty_celltype_lookup.T_cell"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, you can search for a standard term using fuzzy string matching.\n",
+    "This will automatically search for the best match in the complete Cell Ontology."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bionty_celltype.fuzzy_match(\"T cells\", bionty_celltype.name)"
    ]
   },
@@ -262,7 +358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "record_t_cell = CellType(lookup.T_cell)\n",
+    "record_t_cell = CellType(bionty_celltype_lookup.T_cell)\n",
     "record_t_cell"
    ]
   },
@@ -271,9 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want the record name to be exactly \"T cells\" as the CellTypist ontology, you may change it and add the name \"T cell\" as a synonym:\n",
-    "\n",
-    "(synonyms are concatenated by \"|\")"
+    "If you want the record name to be exactly \"T cells\" as the CellTypist ontology, you may change it and add the name \"T cell\" as a synonym:"
    ]
   },
   {
@@ -283,7 +377,7 @@
    "outputs": [],
    "source": [
     "record_t_cell.name = \"T cells\"\n",
-    "record_t_cell.synonyms += \"|T cell\"\n",
+    "record_t_cell.add_synonym(\"T cell\")\n",
     "\n",
     "record_t_cell"
    ]
@@ -310,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the rest 3 terms, we directly create records without additonal metadata:"
+    "For the rest 3 terms, we directly create records without additional metadata to highlight the difference between records with and without metadata:"
    ]
   },
   {
@@ -334,6 +428,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These 3 records are lacking Cell Ontology IDs and further cell type descriptions. However, if new cell types are discovered, a corresponding Cell Ontology may not yet exist and Lamin supports this use-case as well."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All that is now left to do is to add these records to our LaminDB instance using {func}`docs:lamindb.add` ."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -347,7 +457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CellTypist ontology registry in LaminDB"
+    "### Accessing the CellTypist ontology registry in LaminDB"
    ]
   },
   {
@@ -355,7 +465,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To retrieve the full ontology table:"
+    "The previously added CellTypist ontology registry is now available in LaminDB.\n",
+    "To retrieve the full ontology table as a Pandas DataFrame we can use {func}`docs:lamindb.select`:"
    ]
   },
   {
@@ -372,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look up for a name via auto-completion:"
+    "This enables us to look for cell types by creating a lookup object from our new `CellType` registry."
    ]
   },
   {
@@ -396,9 +507,28 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Annotate a dataset with cell types using CellTypist"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Annotate cell types predicted with CellTypist"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now demonstrate how simple it is to predict and add cell types to LaminDB with CellTypist.\n",
+    "Our dataset of choice is a simple sample dataset together with a sample model."
    ]
   },
   {
@@ -408,7 +538,6 @@
    "outputs": [],
    "source": [
     "input_file = celltypist.samples.get_sample_csv()\n",
-    "\n",
     "input_file"
    ]
   },
@@ -421,6 +550,14 @@
     "predictions = celltypist.annotate(\n",
     "    input_file, model=\"Immune_All_Low.pkl\", majority_voting=True\n",
     ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we've predicted all cell types we create an [Anndata](https://anndata.readthedocs.io/en/latest) object that we will eventually track with LaminDB."
    ]
   },
   {
@@ -446,7 +583,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Parse cell type labels:"
+    "Parse cell type labels as we've seen above."
    ]
   },
   {
@@ -472,7 +609,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Track the annotated dataset in LaminDB"
+    "### Track the annotated dataset in LaminDB"
    ]
   },
   {
@@ -480,7 +617,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's enable tracking of the current notebook as the transform of this file:"
+    "Let's enable tracking of the current notebook as the transform of this file using {func}`docs:lamindb.track`:"
    ]
   },
   {
@@ -497,7 +634,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a file record from AnnData object:"
+    "Create a file record using {func}`docs:lamindb.File` of the AnnData object.\n",
+    "We further define a name of the dataset for clarity that can also be queried for."
    ]
   },
   {
@@ -540,7 +678,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can track the file from a cell type:"
+    "Now we can track the file and search for it for example by querying for a specific cell type."
    ]
   },
   {
@@ -570,11 +708,64 @@
    "source": [
     "ln.select(ln.Transform).join(ln.File).where(ln.File.name.contains(\"celltypist\")).df()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lamin makes it easy to annotate cell types with ontology information and to track any datasets with such annotated cell types.\n",
+    "It does not matter whether the cell types where already a part of an ontology or newly found - Lamin supports both use-cases."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try it yourself"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook is available at [https://github.com/laminlabs/lamin-examples](https://github.com/laminlabs/lamin-examples)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "1. [CellTypist publication](https://www.science.org/doi/10.1126/science.abl5197)\n",
+    "2. [CellTypist Github repository](https://github.com/Teichlab/celltypist).\n",
+    "3. [Cell Ontology](https://www.ebi.ac.uk/ols/ontologies/cl)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aim",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -588,7 +779,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.10"
   },
   "nbproject": {
    "id": "s5mkN5NQ1ttI",
@@ -602,5 +793,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
