--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -171,15 +171,15 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-cell",
+     "hide-output"
     ]
    },
    "outputs": [],
    "source": [
     "# A lamindb instance containing Bionty schema (skip if you already loaded your instance)\n",
-    "# The lamin1 schema is needed for linking CellType directly to File\n",
     "\n",
-    "!lamin init --storage celltypist --schema bionty,lamin1"
+    "!lamin init --storage celltypist --schema bionty"
    ]
   },
   {
@@ -199,7 +199,7 @@
     "import lamindb as ln\n",
     "from lnschema_bionty import CellType\n",
     "\n",
-    "bionty_celltype = CellType.bionty()"
+    "celltype_bionty = CellType.bionty()  # equals to bionty.CellType()"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "outputs": [],
    "source": [
     "# Check out which ontology of cell types is used in bionty\n",
-    "bionty_celltype"
+    "celltype_bionty"
    ]
   },
   {
@@ -226,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CellType.__fields__.keys()"
+    "CellType._meta.fields"
    ]
   },
   {
@@ -251,6 +251,15 @@
     "        \"Cell Ontology ID\": CellType.ontology_id,\n",
     "    },\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(records)"
    ]
   },
   {
@@ -322,8 +331,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty_celltype_lookup = bionty_celltype.lookup()\n",
-    "bionty_celltype_lookup.T_cell"
+    "celltype_bionty_lookup = celltype_bionty.lookup()\n",
+    "celltype_bionty_lookup.T_cell"
    ]
   },
   {
@@ -341,7 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty_celltype.fuzzy_match(\"T cells\", bionty_celltype.name)"
+    "celltype_bionty.fuzzy_match(\"T cells\", celltype_bionty.name)"
    ]
   },
   {
@@ -358,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "record_t_cell = CellType(bionty_celltype_lookup.T_cell)\n",
+    "record_t_cell = CellType.from_bionty(celltype_bionty_lookup.T_cell)\n",
     "record_t_cell"
    ]
   },
@@ -449,7 +458,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.add(records);"
+    "ln.save(records);"
    ]
   },
   {
@@ -648,6 +657,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.save(file_annotated)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -661,16 +679,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_annotated.cell_types = celltypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.add(file_annotated);"
+    "file_annotated.cell_types.set(celltypes)"
    ]
   },
   {
@@ -687,9 +696,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.select(ln.File).join(ln.File.cell_types).where(\n",
-    "    CellType.name == db_lookup.Tcm_Naive_helper_T_cells\n",
-    ").all()"
+    "ln.select(ln.File).filter(cell_types__name=db_lookup.Tcm_Naive_helper_T_cells).df()"
    ]
   },
   {
@@ -706,7 +713,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.select(ln.Transform).join(ln.File).where(ln.File.name.contains(\"celltypist\")).df()"
+    "ln.select(ln.Transform).filter(files__name__icontains=\"celltypist\").df()"
    ]
   },
   {
@@ -779,7 +786,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.16"
   },
   "nbproject": {
    "id": "s5mkN5NQ1ttI",
