--- a/docs/biology/enrichr.ipynb
+++ b/docs/biology/enrichr.ipynb
@@ -116,7 +116,8 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-cell",
+     "hide-output"
     ]
    },
    "outputs": [],
@@ -133,7 +134,9 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "from lnschema_bionty import Pathway, Gene"
+    "from lnschema_bionty import Pathway, Gene\n",
+    "\n",
+    "pathway_bionty = Pathway.bionty()  # equals to bionty.Pathway()"
    ]
   },
   {
@@ -144,7 +147,7 @@
    "source": [
     "# Check which ontology of Pathway is being used in bionty\n",
     "\n",
-    "Pathway.bionty()"
+    "pathway_bionty"
    ]
   },
   {
@@ -179,6 +182,15 @@
    "outputs": [],
    "source": [
     "pathway_records[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.save(pathway_records);"
    ]
   },
   {
@@ -219,6 +231,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.save(gene_records);"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -244,7 +265,7 @@
     "for pathway_record in pathway_records:\n",
     "    pathway_genes = go_bp_parsed.get(pathway_record.ontology_id)[1]\n",
     "    pathway_genes_records = [gene_records_ids.get(gene) for gene in pathway_genes]\n",
-    "    pathway_record.genes = pathway_genes_records"
+    "    pathway_record.genes.set(pathway_genes_records)"
    ]
   },
   {
@@ -261,24 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_record.genes[:3]"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Commit all pathways and genes records to the database"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.add(pathway_records);"
+    "pathway_record.genes.values_list(\"symbol\", flat=True)"
    ]
   },
   {
@@ -467,6 +471,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.save(file)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -480,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs_up_features = ln.Features(degs_up.names, Gene.symbol)"
+    "degs_up_featureset = ln.Featureset.from_iterable(degs_up.names, Gene.symbol)"
    ]
   },
   {
@@ -489,7 +502,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs_dw_features = ln.Features(degs_dw.names, Gene.symbol)"
+    "degs_dw_featureset = ln.Featureset.from_iterable(degs_dw.names, Gene.symbol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.save(degs_up_featureset)\n",
+    "ln.save(degs_dw_featureset);"
    ]
   },
   {
@@ -507,19 +530,10 @@
    "outputs": [],
    "source": [
     "# get ontology ids for the top 10 pathways\n",
-    "\n",
     "enr_up_top10 = [i[0] for i in enr_up.head(10).Term.apply(parse_ontology_id_from_keys)]\n",
-    "enr_dw_top10 = [i[0] for i in enr_dw.head(10).Term.apply(parse_ontology_id_from_keys)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get pathway records\n",
+    "enr_dw_top10 = [i[0] for i in enr_dw.head(10).Term.apply(parse_ontology_id_from_keys)]\n",
     "\n",
+    "# get pathway records\n",
     "enr_up_top10_pathways = ln.parse(enr_up_top10, Pathway.ontology_id)\n",
     "enr_dw_top10_pathways = ln.parse(enr_dw_top10, Pathway.ontology_id)"
    ]
@@ -530,8 +544,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs_up_features.pathways = enr_up_top10_pathways\n",
-    "degs_dw_features.pathways = enr_dw_top10_pathways"
+    "degs_up_featureset.pathways.set(enr_up_top10_pathways)\n",
+    "degs_dw_featureset.pathways.set(enr_dw_top10_pathways)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "degs_up_featureset.pathways.values_list(\"name\", flat=True)"
    ]
   },
   {
@@ -548,25 +571,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.features.append(degs_up_features)\n",
-    "file.features.append(degs_dw_features)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Commit to the database:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.add(file);"
+    "file.featuresets.add(degs_up_featureset)\n",
+    "file.featuresets.add(degs_dw_featureset)"
    ]
   },
   {
@@ -583,7 +589,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.select(Pathway).where(Pathway.name.contains(\"interferon-beta\")).all()"
+    "ln.select(Pathway).filter(name__contains=\"interferon-beta\").df()"
    ]
   },
   {
@@ -600,7 +606,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.select(Pathway).join(Pathway.genes).where(Gene.symbol == \"KIR2DL1\").all()"
+    "ln.select(Pathway).filter(genes__symbol=\"KIR2DL1\").df()"
    ]
   },
   {
@@ -617,9 +623,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.select(ln.File.name, Pathway.name, Pathway.ontology_id).join(ln.File.features).join(\n",
-    "    ln.Features.pathways\n",
-    ").where(Pathway.name.contains(\"interferon-beta\")).df()"
+    "ln.select(ln.File).filter(\n",
+    "    featuresets__pathways__name__icontains=\"interferon-beta\"\n",
+    ").first()"
    ]
   },
   {
@@ -636,16 +642,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ss = ln.Session()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pathway = ss.select(Pathway, ontology_id=\"GO:0035456\").one()\n",
+    "pathway = ln.select(Pathway, ontology_id=\"GO:0035456\").one()\n",
     "\n",
     "pathway"
    ]
@@ -656,14 +653,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs = (\n",
-    "    ss.select(ln.Features)\n",
-    "    .join(ln.Features.pathways)\n",
-    "    .where(Pathway.ontology_id == pathway.ontology_id)\n",
-    "    .one()\n",
-    ")\n",
-    "\n",
-    "degs"
+    "degs = ln.select(ln.Featureset).filter(pathways__ontology_id=pathway.ontology_id).one()"
    ]
   },
   {
@@ -680,7 +670,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[i for i in pathway.genes if i in degs.genes]"
+    "pathway_genes = set(pathway.genes.values_list(\"symbol\", flat=True))\n",
+    "degs_genes = set(degs.genes.values_list(\"symbol\", flat=True))"
    ]
   },
   {
@@ -689,7 +680,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ss.close()"
+    "pathway_genes.intersection(degs_genes)"
    ]
   }
  ],
