--- a/docs/biology/enrichr.ipynb
+++ b/docs/biology/enrichr.ipynb
@@ -493,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs_up_featureset = ln.Featureset.from_iterable(degs_up.names, Gene.symbol)"
+    "degs_up_featureset = ln.FeatureSet.from_iterable(degs_up.names, Gene.symbol)"
    ]
   },
   {
@@ -502,7 +502,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs_dw_featureset = ln.Featureset.from_iterable(degs_dw.names, Gene.symbol)"
+    "degs_dw_featureset = ln.FeatureSet.from_iterable(degs_dw.names, Gene.symbol)"
    ]
   },
   {
@@ -653,7 +653,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs = ln.select(ln.Featureset).filter(pathways__ontology_id=pathway.ontology_id).one()"
+    "degs = ln.select(ln.FeatureSet).filter(pathways__ontology_id=pathway.ontology_id).one()"
    ]
   },
   {
